fix(cards): fix cards alignment bug
Project cards and trending card bottom edges now aligned.

--- a/src/styles.css
+++ b/src/styles.css
@@ -229,10 +229,21 @@ button:hover {
     margin-bottom: 0.5em;
 }
 
-.projects-container {
-    grid-row: 1 / 3;
+.projects-container,
+.announcements-container,
+.trending-container {
     display: flex;
     flex-direction: column;
+}
+
+.projects-container,
+.announcements-card,
+.trending-card {
+    flex-grow: 1;
+}
+
+.projects-container {
+    grid-row: 1 / 3;
 }
 
 .project-cards-container {
